--- a/partials/banner.ejs
+++ b/partials/banner.ejs
@@ -2,10 +2,9 @@
 <div class="content-banner">
     <div class="banner">
         <p>
-            Montamos y proveemos una amplia gama de aislaciones termicas, que van desde los --250°C hasta encima de los 1400°C.</p>
+            Montamos y proveemos una amplia gama de aislaciones termicas, que van desde los -250°C hasta encima de los 1400°C.</p>
             <p>
-                Contamos con amplio Stock de materiales aislantes para venta o trabajos propios
-                Las aislaciones termicas permiten ahorros energeticos, eficiencia en los procesos que se traducen en reduccion de costos y cuidado del medio ambiente        </p>
+                Contamos con amplio Stock de materiales aislantes para venta o trabajos propios. Las aislaciones termicas permiten ahorros energeticos, eficiencia en los procesos que se traducen en reduccion de costos y cuidado del medio ambiente        </p>
         <a href="#footer">Contactanos</a>
     </div>
 </div>
