cambio de nombre al recubrimiento

--- a/partials/fabricacion.ejs
+++ b/partials/fabricacion.ejs
@@ -2,10 +2,10 @@
 <div class="content-fabricacion">
     <h2>Fabricacion</h2>
     <p>
-        Bienvenido a nuestro mundo de recubrimiento metálico, donde la
+        Bienvenido a nuestro mundo de recubrimiento aislante, donde la
         precisión se encuentra con la resistencia para dar vida a proyectos
         extraordinarios. En cada paso de nuestro proceso, fusionamos artesanía experta
-        y tecnología de vanguardia para aplicar recubrimientos metálicos de la más alta
+        y tecnología de vanguardia para aplicar recubrimientos aislantes de la más alta
         calidad.
     </p>
     <!-- boton para navegar al material de fabricacion -->
