implementar pagina de montaje

--- a/partials/main.ejs
+++ b/partials/main.ejs
@@ -31,6 +31,9 @@
     </div>
     <!-- Inclusión de la sección de fabricación desde un archivo parcial -->
     <%- include('fabricacion'); %>
+
+    <!-- Inclusión de la sección de montaje desde un archivo parcial -->
+    <%- include('montaje'); %>
 </main>
 
 
