--- a/public/css/resize.css
+++ b/public/css/resize.css
@@ -57,6 +57,27 @@
         padding: .7rem 2rem;
     }
 
+
+    /* montaje */
+    .content-montaje h2{
+        font-size: 26px;
+    }
+    .content-montaje p{
+        width: 100%;
+        text-align: center;
+    }
+    .galery-montaje{
+        width: 100%;
+    }
+
+    .galery-montaje .galery-img{
+        width: 100%;
+        height: 300px;
+    }
+    .galery-montaje .galery-img:nth-child(even){
+        width: 100%;
+        height: 300px;
+    }
     .content-end{
         flex-direction: column;
     }
