--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -4,6 +4,7 @@
 @import url(beneficios.css);
 @import url(main.css);
 @import url(fabricacion.css);
+@import url(montaje.css);
 @import url(footer.css);
 @import url(servicios.css);
 @import url(resize.css);
